# AlphaZeroArcade

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  Othello.ipynb  README.md  REPO_ROOT_MARKER  build.py  build.sh  build_docker_image.py  create_gcloud_image.py  create_gcloud_instance.py  docker-compose.yml  env_setup.sh  environment.yml  gcloud_common.py  gcp_instance_startup.sh  gcp_setup_wizard.py  gcp_staging_instance_cleanup.sh  gcp_staging_instance_setup.sh  justfile  launch_gcloud_instance.py  pull_docker_image.py  push_docker_image.py  requirements.txt  run_docker.py  run_game.py  setup_common.py  setup_wizard.py  ssh_to_gcloud_instance.py  trt_benchmark.cpp  upload_benchmarks.py  viz.ipynb
benchmark_records/: c4.json  chess.json  hex.json
cmake/: GameMacros.cmake
cpp/: CLAUDE.md  mock_tictactoe.cpp
cpp/src/: CMakeLists.txt
cpp/src/alpha0/: CMakeLists.txt
cpp/src/alpha0/main/: GameServerUnitTests.cpp  UnitTests.cpp
cpp/src/alphazero/: CMakeLists.txt
cpp/src/alphazero/main/: GameServerUnitTests.cpp  UnitTests.cpp
cpp/src/core/: CMakeLists.txt  CmdServerClient.cpp  CmdServerListener.cpp  GameServerBase.cpp  Globals.cpp  LoopControllerClient.cpp  ModelBundle.cpp  NeuralNet.cpp  ReceivedModel.cpp  TrainingServerClient.cpp  TreePanel.cpp
cpp/src/core/main/: LoopControllerClientTests.cpp
cpp/src/games/blokus/: CMakeLists.txt  Game.cpp  GameState.cpp  Pieces.cpp  Types.cpp
cpp/src/games/blokus/main/: Blokus.cpp  UnitTests.cpp
cpp/src/games/blokus/shared/: Blokus_ffi.cpp
cpp/src/games/carcassonne/: CMakeLists.txt  LookupTables.cpp
cpp/src/games/carcassonne/main/: Carcassonne.cpp  Carcassonne_ffi.cpp  UnitTests.cpp
cpp/src/games/chess/: CMakeLists.txt  Game.cpp  LcZeroProcess.cpp  PolicyEncoding.cpp  StockfishProcess.cpp  SyzygyTable.cpp  UciProcess.cpp  tbconfig.h
cpp/src/games/chess/main/: Chess.cpp  UnitTests.cpp
cpp/src/games/chess/shared/: Chess_ffi.cpp
cpp/src/games/connect4/: CMakeLists.txt  Game.cpp  GameState.cpp  PerfectOracle.cpp  PerfectPlayer.cpp
cpp/src/games/connect4/main/: Connect4.cpp  DshinScratch.cpp  GenerateOracleLabeledGames.cpp  UnitTests.cpp
cpp/src/games/connect4/shared/: Connect4_ffi.cpp
cpp/src/games/hex/: CMakeLists.txt  Game.cpp
cpp/src/games/hex/main/: Hex.cpp  UnitTests.cpp
cpp/src/games/hex/shared/: Hex_ffi.cpp
cpp/src/games/kuhn_poker/: CMakeLists.txt
cpp/src/games/kuhn_poker/main/: UnitTests.cpp
cpp/src/games/nim/: CMakeLists.txt  Game.cpp
cpp/src/games/nim/main/: UnitTests.cpp
cpp/src/games/othello/: CMakeLists.txt  EdaxOracle.cpp  Game.cpp  GameState.cpp  flip_sse.cpp
cpp/src/games/othello/aux_features/: UnitTests.cpp
cpp/src/games/othello/main/: Othello.cpp  UnitTests.cpp
cpp/src/games/othello/shared/: Othello_ffi.cpp
cpp/src/games/stochastic_nim/: CMakeLists.txt  PerfectPlayerUnitTests.cpp
cpp/src/games/stochastic_nim/main/: UnitTests.cpp  stochastic_nim.cpp
cpp/src/games/stochastic_nim/shared/: stochastic_nim_ffi.cpp
cpp/src/games/tictactoe/: CMakeLists.txt  Game.cpp  GameState.cpp  PerfectStrategyLookupTable.cpp
cpp/src/games/tictactoe/main/: TicTacToe.cpp  UnitTests.cpp
cpp/src/games/tictactoe/shared/: TicTacToe_ffi.cpp
cpp/src/generic_players/: CMakeLists.txt
cpp/src/generic_players/main/: RemotePlayerUnitTests.cpp  UnitTests.cpp
cpp/src/goldenfile_tests/: CMakeLists.txt
cpp/src/goldenfile_tests/main/: Alpha0UnitTests.cpp  DataLoaderUnitTests.cpp  GameServerUnitTests.cpp  GenericPlayersUnitTests.cpp  RemotePlayerUnitTests.cpp
cpp/src/integration_tests/: CMakeLists.txt
cpp/src/integration_tests/main/: Alpha0UnitTests.cpp  BackupNNEquivalenceTests.cpp  Beta0UnitTests.cpp  DataLoaderUnitTests.cpp  GameServerUnitTests.cpp  GenericPlayersUnitTests.cpp
cpp/src/mcts/: CMakeLists.txt  NNEvaluationServiceProvider.cpp
cpp/src/mcts/main/: GameServerUnitTests.cpp  ManagerUnitTests.cpp  UnitTests.cpp
cpp/src/tests/main/: RemotePlayerUnitTests.cpp
cpp/src/tools/: CMakeLists.txt  OnnxEngineBuilder.cpp
cpp/src/util/: BoostUtil.cpp  CMakeLists.txt  Config.cpp  CudaUtil.cpp  GTestUtil.cpp  KeyValueDumper.cpp  LoggingUtil.cpp  Math.cpp  RepoUtil.cpp  SocketUtil.cpp  StaticVars.cpp  ThreadSafePrinter.cpp
cpp/src/util/main/: AllocPoolTests.cpp  BitMapUtilTests.cpp  BoostUtilTests.cpp  CompactBitSetTests.cpp  CppUtilTests.cpp  CudaUtilTests.cpp  EigenUtilTests.cpp  ExponentialDecayTests.cpp  FiniteGroupsTests.cpp  Gaussian1DTests.cpp  IndexedDispatcherTests.cpp  LRUCacheTests.cpp  MathTests.cpp  MetaProgrammingTests.cpp  RandomTests.cpp  RecyclingAllocPoolTests.cpp  StaticCircularBufferTests.cpp  StringUtilTests.cpp  TensorRtUtilTests.cpp  UnitTests.cpp
cpp/src/util/main/mit/: UnitTests.cpp
cpp/src/util/mit/: functions.cpp  scheduler.cpp
docker/: Dockerfile  README.md  build.sh  install_deps.sh  shell
docker-setup/: Dockerfile  devuser-setup.sh  entrypoint.sh  install_deps.sh
docs/: ActionValueTarget.md  AuxValueTarget.md  BayesianMCTS.md  BayesianMCTS.tex  GameConcept.md  GameLogFormat.md  GammaZero.tex  LuckAdjustments.md  MCTS_with_imperfect_information.md  MO_ISMCTS_soundness.md  Nash-ISMCTS.md  Q-Dispersion-Tree-Search.md  Scrabble.md
extra_deps/: README.md  build.py  update.sh
gcloud/: default_bashrc  instance_startup.sh  staging_instance_setup.sh
include/: chess.hpp
networks/: README.md
py/: CLAUDE.md  assign_ratings.py  benchmarking.ipynb  binary_dump_game_log.py  build.py  check_torch_inf.py  clang_format_all_cpp_files.py  config.py  cuda_test.py  export_conda_env.py  game.py  game_index.py  game_runner.py  games.py  grade_c4_models.py  interface.py  mcts.py  net_modules.py  neural_net.py  nn_eval.py  pieces.py  play_in_browser.py  players.py  profiling.py  ratings_viz.py  res_net_modules.py  run_tests.py  setup.py  train.py  update_conda_env.py  viz_c4_progress.py
reference.players/: c4.json  chess.json  othello.json  stochastic_nim.json  tictactoe.json
reference_benchmarks/: c4.json  othello.json  stochastic_nim.json  tictactoe.json
src/: board.hpp  include.hpp
tensorrt-demo/: .gitignore  (+4 more)
(+2069 files in other folders)
